layout issue fixed and portfolio popup,testimonial slider fixed

--- a/res/css/layout.css
+++ b/res/css/layout.css
@@ -822,6 +822,7 @@ call-to-action .button {
 
 /* Control Nav */
 .flex-control-nav {
+    display: flex;
     width: 100%;
     position: absolute;
     bottom: -20px;
